--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="vi">
 <head>
 <meta charset="UTF-8" />
-<title>TENNIS CD9 2026</title>
+<title>TENNIS ĐỊNH MỆNH CD9 2026</title>
 <style>
 body{
   margin:0;
@@ -80,7 +80,7 @@ th{
 </head>
 <body>
 
-<header>TENNIS CD9 2026</header>
+<header>TENNIS ĐỊNH MỆNH CD9 2026</header>
 
 <nav>
   <button class="active" onclick="showTab('bxh')">BXH</button>
